# haskell-playground

./: .gitignore  Block  Block.hs  CharPairs.hs  Concur.hs  Conduits.hs  Cont.hs  Euler  Euler.hs  Euler19.hs  Euler41.hs  Existentials.hs  Gadts.hs  HigherRank.hs  LICENSE  Poker.hs  Spec.hs  TestIO.hs  Threads.hs  Zippers.hs  hp.cabal
main/: BlockMain.hs  CharPairsMain.hs  Euler89Main.hs  FreeMain.hs  GroundhogMain.hs  PokerMain.hs
poker/: Poker.hs
src/: AesonFun.hs  AesonFun2.hs  AlaCarte.hs  Block.hs  CharPairs.hs  Conduits.hs  Euler.hs  Euler15.hs  Euler19.hs  Euler31.hs  Euler41.hs  Euler45.hs  Euler6.hs  Euler89.hs  FreeStuff.hs  Gadts.hs  Groundhogging.hs  HigherRank.hs  MyFunctor.hs  Occupation.hs  Poker.hs  Statements.hs  TestIO.hs  Util.hs  Vehicles.hs  Weird.hs
test/: Main.hs
test_files/: output.txt
