name:                hp
version:             0.0
synopsis:            My Haskell Playground
description:         Me learning haskell by playing around.
homepage:            https://github.com/nlim/haskell-playground
license:             MIT
license-file:        LICENSE
author:              Nathaniel Lim
maintainer:          nathaniel.j.lim@gmail.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git@github.com:nlim/haskell-playground.git

-- configuration for building a library
library
  hs-source-dirs: src

  exposed-modules:
    Block
    Poker
    CharPairs
    Util
    FreeStuff

  extensions: BangPatterns

  build-depends:
    base  >= 4 && < 5,
    containers,
    parallel,
    split,
    free,
    mtl


executable blockProgramHaskell
  hs-source-dirs: main
  main-is: BlockMain.hs
  build-depends: base < 5, hp
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N8"

executable pokerHand
  hs-source-dirs: main
  main-is: PokerMain.hs
  build-depends: base < 5, hp

executable freeProgram
  hs-source-dirs: main
  main-is: FreeMain.hs
  build-depends: base < 5, hp


executable charPairsProgram
  hs-source-dirs: main
  main-is: CharPairsMain.hs
  build-depends: base < 5, hp


-- configuration for Unit tests and properties
test-suite unit-tests-and-properties
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: . test
  build-depends:
    base,
    HUnit,
    QuickCheck                 >= 2.4,
    test-framework             >= 0.6,
    test-framework-hunit,
    test-framework-quickcheck2 >= 0.2,
    test-framework-th          >= 0.2

